OpenAPI Implementation