@@ -5,35 +5,41 @@ import com.example.demo.exceptions.FilterBadTypeException;
 import com.example.demo.model.Quote;
 import com.example.demo.repository.QuoteRepository;
 import lombok.RequiredArgsConstructor;
+import org.openapitools.api.QuoteApi;
+import org.openapitools.model.Response;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.Arrays;
-import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class QuoteService {
+public class QuoteService implements QuoteApi {
     private final QuoteRepository quoteRepository;
 
     @Value(("${api.url}"))
     private String api;
 
-    //TODO api url should be hidden and not exposed
     public Quote receiveQuote() {
         RestTemplate restTemplate = new RestTemplate();
         return restTemplate.getForObject(this.api, Quote.class);
     }
 
-    public ResponseEntity<List<Quote>> getQuote(QuoteDTO quoteDTO) {
+    public ResponseEntity<Response> getQuote(QuoteDTO quoteDTO) {
+        Response response = new Response();
+        response.code(HttpStatus.OK.value())
+                .message("quotes fetched successfully");
         return ResponseEntity.ok(switch (quoteDTO.getType()) {
             case "id" ->
-                    quoteRepository.findAll().stream().filter(quote -> quote.get_id().equals(quoteDTO.getValue())).toList();
+                    response.content(quoteRepository.findAll().stream().filter(quote -> quote.get_id().equals(quoteDTO.getValue())).collect(Collectors.toList()));
             case "author" ->
-                    quoteRepository.findAll().stream().filter(quote -> quote.getAuthorSlug().equals(quoteDTO.getValue())).toList();
-            case "tag" -> quoteRepository.findAll().stream().filter(quote -> quoteDTO.isMatch(Arrays.stream(quote.getTags()).toList())).toList();
+                    response.content(quoteRepository.findAll().stream().filter(quote -> quote.getAuthorSlug().equals(quoteDTO.getValue())).collect(Collectors.toList()));
+            case "tag" ->
+                    response.content(quoteRepository.findAll().stream().filter(quote -> quoteDTO.isMatch(Arrays.stream(quote.getTags()).toList())).collect(Collectors.toList()));
             default -> throw new FilterBadTypeException("The filter type is wrong or not supported.");
         });
     }
